--- a/style.css
+++ b/style.css
@@ -1,6 +1,42 @@
-head{
-    background-color: red;
+*{
+    background-image: url(Images/banner.jpg.jpg);
+    background-position: fixed;
 }
-title{
-    color: red;
+body{
+    color: white;
+    font-family:Arial, Helvetica, sans-serif;
+    
+    margin:0;
+}
+section{
+    align-items: center;
+}
+h1{
+    text-align:center;
+    color:white;
+    font-size: 45px;
+    font-style: bold;
+}
+h2{
+    text-align:left;
+    color:white;
+    font-size:28px;
+    font-family:Arial, Helvetica, sans-serif;
+}
+h3{
+    text-align:left;
+    color:rgb(72, 72, 162);
+    color:White;
+    font-size:30px;
+}
+ul li a{
+font-size: 14px;
+color:rgb(72, 72, 162);
+}
+p{
+    font-size:18px;
+    font-family:Arial, Helvetica, sans-serif;
+}
+p1{
+    font-size:24px;
 }
